--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   </div>
 
   <!-- Insert link to app.js here -->
-  <script src="./scripts//idb.js"></script>
+  <script src="./scripts/idb.js"></script>
   <script src='./scripts/app.js' ></script>
 </body>
 </html>
