App manifest.json

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Weather</title>
   <!-- Insert link to stylesheet here -->
   <link href='./styles/ud811.css' rel="stylesheet" /> 
+  <link href="manifest.json" rel="manifest">
 </head>
 <body>
 
