--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <!-- Insert link to stylesheet here -->
   <link href='./styles/ud811.css' rel="stylesheet" /> 
   <link href="manifest.json" rel="manifest">
+  <meta name='them-color' content="2f3ba2">
+  <!-- Add to homescreen for Safari on IOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="Weather">
+  <link rel="apple-touch-icon" sizes="60x60" href="/images/icons/apple-60.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/images/icons/apple-76.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/images/icons/apple-120.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/images/icons/apple-152.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="/images/icons/apple-167.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-180.png">
 </head>
 <body>
 
